--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -26,16 +26,7 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
       - name: aws
-        uses: aws-actions/configure-aws-credentials@v3
+        uses: sls-mentor/sls-mentor-github-action@v0.6
         with:
-          role-to-assume: arn:aws:iam::463151931555:role/github-action-role
+          iam-role: arn:aws:iam::463151931555:role/github-action-role
           aws-region: eu-west-1
-      - name: run sls-mentor
-        id: run-sls-mentor
-        run: |
-          echo "SLS_MENTOR_RESULT<<EOF"$'\n'"$(npx sls-mentor@latest --level 1 --noFail)"$'\n'EOF >> "$GITHUB_OUTPUT"
-        shell: bash
-      - name: output
-        env:
-          SLS_MENTOR_RESULT: ${{ steps.run-sls-mentor.outputs.SLS_MENTOR_RESULT }} 
-        run: echo "$SLS_MENTOR_RESULT"
